--- a/quartus/FPGA4U_DE0.qsf
+++ b/quartus/FPGA4U_DE0.qsf
@@ -1,4 +1,4 @@
-set_global_assignment -name LAST_QUARTUS_VERSION 15.1.0
+set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
 set_global_assignment -name TOP_LEVEL_ENTITY FPGA4U_DE0
 set_global_assignment -name SMART_RECOMPILE ON
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
